@startuml DDD

hide circle
hide fields
' ======= layout =========
skinparam backgroundColor #fcf9ea
skinparam titleBorderRoundCorner 15
skinparam titleFontSize 30
skinparam classAttributeIconSize 0
skinparam titleFontName Arial Black
skinparam titleFontColor #f8a978
skinparam roundcorner 20
skinparam stereotypeCBackgroundColor ffc5a1
left to right direction
/' top to bottom direction '/

skinparam class {

ArrowColor ffc5a1
BorderColor White
BackgroundColor badfdb
BackgroundColor<<Event>> skyblue
BackgroundColor<<Service>> Moccasin
}


package "<<agr Simulation>>" {
  class Simulation <<entity>><<root>> {}
  class SimulationId <<vo>> {}
  class StartDate <<vo>> extends Date {}
  class EndDate <<vo>> extends Date {}
  class Load <<vo>> {}
  class BatteryLoad <<vo>> {}
    class PhotovoltaicLoad <<vo>> {}
  class Date <<vo>> {}

  Simulation --> "1" SimulationId
  Simulation --> "1" StartDate
  Simulation --> "1" EndDate
    Simulation --> "1" Load
    Simulation --> "1" BatteryLoad
    Simulation --> "1" PhotovoltaicLoad

}


package "<<agr Profile>>"{
    class Profile<<entity>><<root>>{

    }
    class ProfileId<<vo>>{}
    class Date<<vo>>{}
    class ProfileTimeStamp<<vo>>{}
    class ProfileLoad<<vo>>{} 
    class SoldEnergy<<vo>>{}
    class BoughtEnergy<<vo>>{}
    class PhotovoltaicEnergyLoad<<vo>>{}
    class StateOfCharge<<vo>>{}
    class PeerIn<<vo>>{}
    class PeerOut<<vo>>{}
    class BatteryCharge<<vo>>{}
    class BatteryDischarge<<vo>>{}

/'     note right{
        Balance of the Prosumer in kw/h, positive values lead to buy energy from the grid
    } '/

    Profile --> "1" Date
    Profile --> "1" ProfileTimeStamp
    Profile --> "1" ProfileId
    Profile --> "1" ProfileLoad

    Profile --> "1" SoldEnergy
    Profile --> "1" BoughtEnergy
    Profile --> "1" PhotovoltaicEnergyLoad
    Profile --> "1" StateOfCharge
    Profile --> "1" Prosumer
    Profile --> "1" Simulation
    Profile --> "1" PeerIn
    Profile --> "1" PeerOut
    Profile --> "1" BatteryCharge
    Profile --> "1" BatteryDischarge
    
/'     note right of ProfileLoad
    Energy required by the user in the interval
    end note  '/
    
}


package "<<agr User>>"{
    class User<<entity>><<root>>{

    }
    class UserId<<vo>>{}
    class UserName<<vo>>{}
    class UserEmail<<vo>>{}
    class UserPassword<<vo>>{}
    class UserPhone<<vo>>{}
    class UserRole<<vo>>{}

    User --> "1" UserId
    User --> "1" UserName
    User --> "1" UserEmail
    User --> "1" UserPassword
    User --> "1" UserPhone
    User --> "1" UserRole
    
}





package "<<agr Battery(ESS)>>"{
    class Battery<<entity>><<root>>{}
    class BatteryId<<vo>>{}
    class BatteryName<<vo>>{}
    class MaxCapacity<<vo>>{}
    class Efficiency<<vo>>{}
    class MaxChargeDischarge <<vo>>{}
    
    Battery --> "1" BatteryId
    Battery --> "1" BatteryName
    Battery --> "1" MaxCapacity
    Battery --> "1" Efficiency
    Battery --> "1" MaxChargeDischarge
}



package "<<agr Community>>"{
    class Community<<entity>><<root>>{

    }
    class CommunityId<<vo>>{}
    class CommunityName<<vo>>{}

    Community --> "1" CommunityId
    Community -> "1" CommunityName
    
    


}

package "<<agr Prosumer>>"{
    class Prosumer<<entity>><<root>>{}
    class ProsumerId<<vo>>{}
    Prosumer --|> "1" User

    Prosumer --> "1" ProsumerId
    Prosumer --> "1" Community
    Prosumer --> "1" Battery
    Profile --> "1" Prosumer 

    

    
}

package "<<agr CommunityManager>>"{
    class CommunityManager<<entity>><<root>>{}
    class CommunityManagerId <<vo>>
     CommunityManager --|> User
     CommunityManager --> "1" CommunityManagerId
     CommunityManager --> "1" Community
}

package "<<agr Administrator>>"{
    class Administrator<<entity>><<root>>{

    }
    class AdminId<<vo>>{}

    Administrator --|> User
   Administrator--> "1" AdminId
}


@enduml
